--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # the latter taking precedence over the former:
 #
 #  * .env                contains default values for the environment variables needed by the app
-#  * .env.local          uncommitted file with local overrides
+#  * ..env.local          uncommitted file with local overrides
 #  * .env.$APP_ENV       committed environment-specific defaults
 #  * .env.$APP_ENV.local uncommitted environment-specific overrides
 #
@@ -28,5 +28,5 @@ APP_SECRET=0b5c29abcd15376912b41d4c25b6ba49
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
